Fix for StreamCard-Item Alignment

--- a/flask-nginx-rtmp-mgmt/static/css/main.css
+++ b/flask-nginx-rtmp-mgmt/static/css/main.css
@@ -75,7 +75,7 @@
     border-radius: 4px;
     font-size: 16px;
     background-color: white;
-    padding: 12px 20px 12px 20px;
+    margin: 12px 20px 12px 20px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -94,7 +94,7 @@
 
 @media screen and (max-width : 640px) {
     .streamcard {
-        margin: auto;
+        margin:0 auto;
         width:280px;
     }
 }
